--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/src/css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="/src/css/bootstrap-grid.min.css">
     <script src="https://kit.fontawesome.com/fad26b402d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/style.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
 <!--     Нельзя указывать / или src, или их комбинацию при указании ссылки на файл в папке -->
 <!-- Самый верный способ проверить правильность указания ссылки - это просто открыть index.html в браузере -->
 </head>
