--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="/src/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <script src="https://kit.fontawesome.com/fad26b402d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.min.css">
 <!--     Нельзя указывать / или src, или их комбинацию при указании ссылки на файл в папке -->
@@ -40,7 +40,7 @@
                     <div class="col-6 col-md-4 offset-md-1 ">
                         <!-- offset - это отступ -->
                         <a href="#" class="subheader_logo">
-                            <img src="/src/icons/main_logo.png" alt="Main logo">
+                            <img src="icons/main_logo.png" alt="Main logo">
                         </a>
                         <div class="subheader_official">
                             Официальный партнер Uber в Москве
@@ -85,7 +85,7 @@
                     <div class="col-md-6">
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/1.png" alt="Wallet" class="reasons_icons">
+                                <img src="icons/8_reasons/1.png" alt="Wallet" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Никаких наличных, оплата происходит автоматически</span>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/2.png" alt="Cash" class="reasons_icons">
+                                <img src="icons/8_reasons/2.png" alt="Cash" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Высокий доход с гарантированными выплатами</span>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/3.png" alt="Keys" class="reasons_icons">
+                                <img src="icons/8_reasons/3.png" alt="Keys" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Комфортное, прозрачное и простое подключение</span>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/4.png" alt="Phone Call" class="reasons_icons">
+                                <img src="icons/8_reasons/4.png" alt="Phone Call" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Круглосуточная поддержка</span>
@@ -127,7 +127,7 @@
                     <div class="col-md-6">
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/5.png" alt="Board" class="reasons_icons">
+                                <img src="icons/8_reasons/5.png" alt="Board" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Комиссия 8% + БОНУСЫ</span>
@@ -137,7 +137,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/6.png" alt="Calendar" class="reasons_icons">
+                                <img src="icons/8_reasons/6.png" alt="Calendar" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Работа в удобное время, никаких графиков</span>
@@ -147,7 +147,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/7.png" alt="Geo Locations" class="reasons_icons">
+                                <img src="icons/8_reasons/7.png" alt="Geo Locations" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Всегда большое количество заказов</span>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="reasons_item">
                             <div class="reasons_round">
-                                <img src="../src/icons/8_reasons/8.png" alt="Car" class="reasons_icons">
+                                <img src="icons/8_reasons/8.png" alt="Car" class="reasons_icons">
                             </div>
                             <div class="reasons_descr">
                                 <span>Без шашечек и наклеек</span>
@@ -223,7 +223,7 @@
             <div class="title">Выбор - отличная штука!</div>
             <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
             <div class="choice_img">
-                <img src="../src/img/car.png" alt="Car">
+                <img src="img/car.png" alt="Car">
             </div>
             <div class="choice_descr">Машины на каждый день.
                 <br> Лучше, быстрее и дешевле, чем такси</div>
@@ -343,13 +343,13 @@
             <div>
                 <div class="footer_mobile">
                     <a href="#">
-                        <img src="../src/img/footer/app_store.png" alt="App Store">
+                        <img src="img/footer/app_store.png" alt="App Store">
                     </a>
                     <a href="#">
-                        <img src="../src/img/footer/google_play.png" alt="Google play">
+                        <img src="img/footer/google_play.png" alt="Google play">
                     </a>
                     <a href="#">
-                        <img src="../src/img/footer/windows_store.png" alt="Windows store">
+                        <img src="img/footer/windows_store.png" alt="Windows store">
                     </a>
                 </div>
             </div>
